--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,51 @@
 
-/* 
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-color: #4c2ca5;
+}
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
+.todo-container {
+    background: rgb(172, 99, 150);
+    padding: 40px;
+    border-radius: 10px;
+    width: 500px;
+}
 
-*/
+h1 {
+    text-align: center;
+    color: black;
+    font-size: 40px;
+    margin-bottom: 20px;
+}
+
+input {
+    width: calc(100% - 22px);
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid #c035ad;
+    border-radius: 5px;
+    margin-bottom: 10px;
+}
+
+
+ul li {
+    padding: 10px;
+    border-bottom: 1px solid black;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+ul li:hover .delete-icon {
+    display: inline;
+}
+
+.delete-icon {
+    display: none;
+    cursor: pointer;
+    color: rgb(240, 34, 62);
+    font-size: 30px;
+}
